fix flex spacing

--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -2,11 +2,16 @@
   margin: 0 auto;
   max-width: 800px;
   font-family: "Inter";
+  min-height: 100vh;
+  border: 1px dashed navy;
+  display: flex;
+  flex-direction: column;
 }
 .heading {
   color: rgb(22, 136, 171);
   font-family: "Inter";
 }
+
 .nav-bar {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -18,6 +23,9 @@
   margin-left: "0.5rem";
   padding: "0.25.rem";
   color: rgb(50, 50, 50);
+}
+main {
+  flex: 1;
 }
 nav a {
   display: inline-block;
